--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$app_compat_version"
     implementation "com.android.support:recyclerview-v7:$app_compat_version"
+    implementation "com.android.support:preference-v7:$app_compat_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -37,11 +38,12 @@ dependencies {
     implementation 'com.hummeling:if97:1.0.5'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
     implementation 'android.arch.paging:runtime:1.0.0-alpha3'
-    implementation 'android.arch.persistence.room:runtime:1.0.0-rc1'
-    kapt "android.arch.persistence.room:compiler:1.0.0-rc1"
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    kapt "android.arch.persistence.room:compiler:1.0.0"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
 }
