--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$app_compat_version"
     implementation "com.android.support:recyclerview-v7:$app_compat_version"
+    implementation "com.android.support:cardview-v7:$app_compat_version"
+    //implementation "com.android.support:design:$app_compat_version"
     implementation "com.android.support:preference-v7:$app_compat_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -35,6 +37,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
+    //implementation "org.jetbrains.anko:anko-design:$anko_version"
+    //implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation 'com.hummeling:if97:1.0.5'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
     implementation 'android.arch.paging:runtime:1.0.0-alpha3'
