--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "ru.lextop.steamcalculator"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -39,7 +39,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
+    //implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
     //implementation "org.jetbrains.anko:anko-design:$anko_version"
     //implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation 'com.hummeling:if97:1.0.5'
@@ -52,5 +52,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    //implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    implementation 'com.google.android.gms:play-services-ads:11.6.0'
 }
