--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '27.0.0'
 }
 
 dependencies {
@@ -27,9 +28,12 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$app_compat_version"
     implementation "com.android.support:recyclerview-v7:$app_compat_version"
     implementation "com.android.support:cardview-v7:$app_compat_version"
+
     //implementation "com.android.support:design:$app_compat_version"
     implementation 'com.takisoft.fix:preference-v7:27.0.1.0'
+
     //implementation "com.android.support:preference-v7:$app_compat_version"
+
     //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -39,8 +43,11 @@ dependencies {
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
+
     //implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
+
     //implementation "org.jetbrains.anko:anko-design:$anko_version"
+
     //implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation 'com.hummeling:if97:1.0.5'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
@@ -52,6 +59,7 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
     //implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     implementation 'com.google.android.gms:play-services-ads:11.6.0'
 }
