--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,9 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$app_compat_version"
     implementation "com.android.support:recyclerview-v7:$app_compat_version"
     implementation "com.android.support:cardview-v7:$app_compat_version"
+    implementation "com.android.support:design:$app_compat_version"
 
-    //implementation "com.android.support:design:$app_compat_version"
-    implementation 'com.takisoft.fix:preference-v7:27.0.1.0'
-
+    implementation "com.takisoft.fix:preference-v7:$app_compat_version.0"
     //implementation "com.android.support:preference-v7:$app_compat_version"
 
     //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
