--- a/Steam/build.gradle
+++ b/Steam/build.gradle
@@ -1,1 +1,29 @@
 apply plugin: 'kotlin'
+
+buildscript {
+    ext.kotlin_version = '1.2.10'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
+}
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile project(':QuantityValue')
+    implementation 'com.hummeling:if97:1.0.5'
+}
+compileKotlin {
+    /*kotlinOptions {
+        jvmTarget = "1.8"
+    }*/
+}
+compileTestKotlin {
+    /*kotlinOptions {
+        jvmTarget = "1.8"
+    }*/
+}
