--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.21'
-    ext.kotlin_std_version = '1.2.21'
+    ext.kotlin_version = '1.2.31'
+    ext.kotlin_std_version = '1.2.31'
     ext.anko_version = '0.10.2'
-    ext.app_compat_version = '27.1.0'
+    ext.app_compat_version = '27.1.1'
     ext.dagger_version = '2.13'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-beta4'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_std_version"
 
         // NOTE: Do not place your application dependencies here; they belong
