--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,21 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+ext {
+    anko_version = '0.10.2'
+    app_compat_version = '28.0.0'
+    dagger_version = '2.17'
+    room_version = '1.1.1'
+}
+
 android {
     dataBinding.enabled = true
-    buildToolsVersion '27.0.3'
-    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
+    compileSdkVersion 28
     defaultConfig {
         applicationId "ru.lextop.steamcalculator"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 8
         versionName "1.5.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -55,14 +62,13 @@ dependencies {
     implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    kapt "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    kapt 'com.android.databinding:compiler:3.1.2'
 
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
 }
