--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 ext {
-    anko_version = '0.10.2'
-    app_compat_version = '28.0.0'
-    dagger_version = '2.17'
-    room_version = '1.1.1'
+    v_anko = '0.10.7'
+    v_app_compat = '1.0.0'
+    v_legacy_app_compat = '28.0.0'
+    v_dagger = '2.16'
+    v_room = '2.0.0'
+    v_lifecycle_extensions = '2.0.0'
+    v_play_services_ads = '17.0.0'
+    v_databinding_compiler = '3.2.0-alpha11'
 }
 
 android {
@@ -20,7 +24,7 @@ android {
         targetSdkVersion 28
         versionCode 8
         versionName "1.5.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -43,32 +47,34 @@ dependencies {
     implementation project(':Steam')
     implementation project(':QuantityValue')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$app_compat_version"
-    implementation "com.android.support:recyclerview-v7:$app_compat_version"
-    implementation "com.android.support:cardview-v7:$app_compat_version"
-    implementation "com.android.support:design:$app_compat_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$v_kotlin"
+    implementation "androidx.appcompat:appcompat:$v_app_compat"
+    implementation "androidx.recyclerview:recyclerview:$v_app_compat"
+    implementation "androidx.cardview:cardview:$v_app_compat"
+    implementation "com.google.android.material:material:$v_app_compat"
 
-    implementation "com.takisoft.fix:preference-v7:$app_compat_version.0"
+    implementation "com.takisoft.fix:preference-v7:$v_legacy_app_compat.0"
     //implementation "com.android.support:preference-v7:$app_compat_version"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.anko:anko:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
+    implementation "org.jetbrains.anko:anko:$v_anko"
+    implementation "org.jetbrains.anko:anko-appcompat-v7:$v_anko"
+    implementation "org.jetbrains.anko:anko-recyclerview-v7:$v_anko"
+    implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$v_anko"
+    implementation "org.jetbrains.anko:anko-cardview-v7:$v_anko"
 
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$v_lifecycle_extensions"
+    implementation "androidx.room:room-runtime:$v_room"
+    kapt "androidx.room:room-compiler:$v_room"
+    implementation "com.google.dagger:dagger:$v_dagger"
+    kapt "com.google.dagger:dagger-compiler:$v_dagger"
+    implementation "com.google.dagger:dagger-android:$v_dagger"
+    implementation "com.google.dagger:dagger-android-support:$v_dagger"
+    kapt "com.google.dagger:dagger-android-processor:$v_dagger"
 
-    implementation 'com.google.android.gms:play-services-ads:17.0.0'
+    kapt "androidx.databinding:compiler:$v_databinding_compiler"
+
+    implementation "com.google.android.gms:play-services-ads:$v_play_services_ads"
 }
